syntax = "proto3";

//compile by command: protoc --go_out=. --go-grpc_out=. .\proto\monitoring.proto

package monitoring;

option go_package = "./proto";

//двохсторонній стрімінг метрики-статус
service MonitoringService {
  rpc StreamMetrics(stream MetricsRequest) returns (stream MetricsResponse);
}

message MetricsRequest {
  string server_ip = 1;
  float cpu_usage = 2;
  float ram_usage = 3;
  float disk_usage = 4;
  int64 timestamp = 5;
}

message MetricsResponse {
  string status = 1;
}